make port configurable

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,15 @@
 # Use a Python base image
 FROM python:3.9-slim-buster
 
-# Set the working directory in the container
-WORKDIR /app/backend
+# Install uv
+RUN pip install uv
 
-# Copy the requirements file and install dependencies
+# Set the working directory in the container
+WORKDIR /app
+
+# Copy the requirements file and install dependencies using uv
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN uv pip install --system --no-cache-dir -r requirements.txt
 
 # Copy the rest of the application code
 COPY . .
@@ -15,4 +18,4 @@ COPY . .
 EXPOSE 8000
 
 # Command to run the application
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "backend.main:app", "--host", "0.0.0.0", "--port", "8000"]
